# control-architecture-for-robotic-arm

./: .gitignore  README.md  detect_object_table.py  topic_webcam_sub.py
Información/: Guia_Instalacion.odt  Manual_Brazo_Robotico.docx
arduinobot_bringup/: CMakeLists.txt  package.xml
arduinobot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
arduinobot_controller/: CMakeLists.txt  package.xml
arduinobot_controller/config/: arduinobot_controllers.yaml
arduinobot_controller/launch/: controller.launch.py
arduinobot_controller/src/: arduinobot_interface.cpp
arduinobot_cpp_examples/src/: simple_parameter.cppZone.Identifier
arduinobot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
arduinobot_description/launch/: gazebo.launch.py
arduinobot_description/meshes/: stl_mesa.STL
arduinobot_description/rviz/: display.rviz
arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_ros2_control.xacro
arduinobot_firmware/: CMakeLists.txt
arduinobot_moveit/config/: arduinobot.srdf  moveit.rviz
arduinobot_moveit/launch/: moveit.launch.py
arduinobot_remote/: CMakeLists.txt  package.xml
arduinobot_remote/arduinobot_remote/: alexa_interface.py
arduinobot_remote/launch/: remote_interface.launch.py
arduinobot_remote/src/: task_server.cpp
firware_esp/: Esp_32.ino
learning_interface/: CMakeLists.txt  package.xml
learning_interface/msg/: ObjectPosition.msg
learning_topic/: package.xml  setup.py
learning_topic/config/: ost.yaml
learning_topic/launch/: vision_launch.py
log/: latest_build
rapling_bringup/: CMakeLists.txt  package.xml
rapling_controller/: CMakeLists.txt  package.xml  rapling_controller.xml
rapling_controller/config/: rapling_controllers.yaml
rapling_controller/include/rapling_controller/: rapling_interface.hpp
rapling_controller/launch/: controller.launch.py
rapling_controller/src/: rapling_interface.cpp
rapling_description/: CMakeLists.txt  package.xml  setup.py
rapling_moveit_2/: CMakeLists.txt  package.xml
rapling_msgs/: CMakeLists.txt  package.xml
rapling_remote/: CMakeLists.txt  package.xml
rapling_remote/src/: task_server.cpp  (+1 more)
visualizacion_angulos/: package.xml  setup.cfg  setup.py
visualizacion_angulos/visualizacion_angulos/: perfil_trayectoria.py  plotter_node.py
visualization_pkg/: package.xml  setup.cfg  setup.py
(+28 files in other folders)
