<?xml version="1.0"?>
<package format="3">
  <name>rapling_controller</name>
  <version>0.0.0</version>
  <description>The arduinobot_controller package</description>
  <maintainer email="antonio.brandi@outlook.it">Antonio Brandi</maintainer>
  <license>Apache 2.0</license>
  <author email="antonio.brandi@outlook.it">Antonio Brandi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>libserial</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>libserial</exec_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>